Refactor DESIGN-08: Added comments to classes and formatted logic files