@@ -35,12 +35,12 @@ public class Grid<T extends Enum<T> & State> {
    * Constructs a {@code Grid} from a two-dimensional list of states and a cell factory. Each state
    * in the list represents the initial state of a corresponding {@link Cell}.
    *
-   * @param rawGrid            a two-dimensional list of {@link CellRecord} representing the initial
-   *                           states and properties of the cells
-   * @param factory            the factory to create cells
-   * @param shape              the grid shape for the grid
-   * @param neighborType       the type of neighbor assignment
-   * @param boundary           the type of edge implementation
+   * @param rawGrid      a two-dimensional list of {@link CellRecord} representing the initial
+   *                     states and properties of the cells
+   * @param factory      the factory to create cells
+   * @param shape        the grid shape for the grid
+   * @param neighborType the type of neighbor assignment
+   * @param boundary     the type of edge implementation
    */
   public Grid(List<List<CellRecord>> rawGrid, CellFactory<T> factory,
       GridShape shape,
@@ -67,14 +67,86 @@ public class Grid<T extends Enum<T> & State> {
   }
 
   /**
-   * Retrieves a specific cell from the grid based on its dx and column indices.
+   * Retrieves a specific cell from the grid based on its row and column indices.
    *
-   * @param row the dx index of the desired cell
+   * @param row the row index of the desired cell
    * @param col the column index of the desired cell
    * @return the cell at the specified position
    */
   public Cell<T> getCell(int row, int col) {
     return grid.get(row).get(col);
+  }
+
+  /**
+   * Sets the number of steps used in neighbor calculations.
+   *
+   * @param steps the number of steps to use
+   */
+  public void setSteps(int steps) {
+    this.neighborCalculator.setSteps(steps);
+  }
+
+  /**
+   * Sets the grid shape for neighbor calculations.
+   *
+   * @param shape the new grid shape
+   */
+  public void setShape(GridShape shape) {
+    this.neighborCalculator.setShape(shape);
+  }
+
+  /**
+   * Sets the neighbor type for neighbor calculations.
+   *
+   * @param neighborType the new neighbor type
+   */
+  public void setNeighborType(NeighborType neighborType) {
+    this.neighborCalculator.setNeighborType(neighborType);
+  }
+
+  /**
+   * Sets the edge type for neighbor calculations.
+   *
+   * @param edgeType the new edge type
+   */
+  public void setEdgeType(EdgeType edgeType) {
+    this.neighborCalculator.setEdgeType(edgeType);
+  }
+
+  /**
+   * Returns the current number of steps used for neighbor calculations.
+   *
+   * @return the number of steps
+   */
+  public int getSteps() {
+    return this.neighborCalculator.getSteps();
+  }
+
+  /**
+   * Returns the current grid shape used for neighbor calculations.
+   *
+   * @return the grid shape
+   */
+  public GridShape getShape() {
+    return this.neighborCalculator.getShape();
+  }
+
+  /**
+   * Returns the current edge type used for neighbor calculations.
+   *
+   * @return the edge type
+   */
+  public EdgeType getEdgeType() {
+    return this.neighborCalculator.getEdgeType();
+  }
+
+  /**
+   * Returns the current neighbor type used for neighbor calculations.
+   *
+   * @return the neighbor type
+   */
+  public NeighborType getNeighborType() {
+    return this.neighborCalculator.getNeighborType();
   }
 
   /**
@@ -102,15 +174,20 @@ public class Grid<T extends Enum<T> & State> {
   /**
    * Returns the number of columns in the grid.
    *
-   * @return the number of columns in the grid
+   * @return the number of columns in the grid, or 0 if the grid is empty
    */
   public int getNumCols() {
     if (!grid.isEmpty()) {
-      return grid.getFirst().size();
+      return grid.get(0).size();
     }
     return 0;
   }
 
+  /**
+   * Returns the {@link NeighborCalculator} associated with this grid.
+   *
+   * @return the neighbor calculator
+   */
   public NeighborCalculator<T> getNeighborCalculator() {
     return neighborCalculator;
   }
@@ -131,7 +208,8 @@ public class Grid<T extends Enum<T> & State> {
   }
 
   /**
-   * Assigns neighbors for each Cell in the grid using the current NeighborCalculator.
+   * Assigns neighbors for each {@link Cell} in the grid using the current
+   * {@link NeighborCalculator}.
    */
   public void assignNeighbors() {
     for (int row = 0; row < getNumRows(); row++) {
@@ -141,16 +219,31 @@ public class Grid<T extends Enum<T> & State> {
     }
   }
 
+  /**
+   * Assigns raycast neighbors for a given cell in a specific direction and for a specified number
+   * of steps.
+   *
+   * @param cell      the cell to assign raycast neighbors to
+   * @param direction the direction in which to perform the raycast
+   * @param steps     the number of steps to raycast
+   */
   public void assignRaycastNeighbor(Cell<T> cell, Direction direction, int steps) {
     int[] coordinates = getCellCoordinates(cell);
-    Map<Direction, Cell<T>> neighbors = neighborCalculator.raycastDirection(this, coordinates[0], coordinates[1], direction, steps);
+    Map<Direction, Cell<T>> neighbors = neighborCalculator.raycastDirection(this, coordinates[0],
+        coordinates[1], direction, steps);
     cell.setNeighbors(neighbors);
   }
 
+  /**
+   * Assigns raycast neighbors for all cells in the grid for a specified number of steps.
+   *
+   * @param steps the number of steps to raycast in all directions for each cell
+   */
   public void assignAllRaycastNeighbors(int steps) {
     for (int row = 0; row < getNumRows(); row++) {
       for (int col = 0; col < getNumCols(); col++) {
-        Map<Direction, Map<Direction, Cell<T>>> allRays = neighborCalculator.raycastAllDirections(this, row, col, steps);
+        Map<Direction, Map<Direction, Cell<T>>> allRays = neighborCalculator.raycastAllDirections(
+            this, row, col, steps);
         Map<Direction, Cell<T>> merged = new HashMap<>();
         for (Map<Direction, Cell<T>> ray : allRays.values()) {
           merged.putAll(ray);
@@ -171,8 +264,25 @@ public class Grid<T extends Enum<T> & State> {
     return new int[]{0, 0};
   }
 
+  /**
+   * Retrieves all possible raycast directions for a given cell.
+   *
+   * @param cell the cell for which to obtain the raycast directions
+   * @return a list of all possible raycast directions based on the cell's position
+   */
   public List<Direction> getAllRaycastDirections(Cell<T> cell) {
     int[] coordinates = getCellCoordinates(cell);
     return neighborCalculator.getAllRaycastDirections(coordinates[0], coordinates[1]);
+  }
+
+  /**
+   * Retrieves the list of available directions for the given cell using the neighbor calculator.
+   *
+   * @param cell the cell for which to obtain available directions
+   * @return a list of directions based on the cell's position
+   */
+  public List<Direction> getDirections(Cell<T> cell) {
+    int[] coordinates = getCellCoordinates(cell);
+    return neighborCalculator.getDirections(coordinates[0], coordinates[1]);
   }
 }
